Add Codecs for config